Bug 343275 - [1] added at the end of a hyperlink
Summary: [1] added at the end of a hyperlink
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composereditor-ng (other bugs)
Version First Reported In: 4.14.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-25 12:59 UTC by Juergen
Modified: 2016-11-23 07:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.29
Sentry Crash Report:


Attachments
screenshot of the mail editor (77.48 KB, image/png)
2015-01-25 14:51 UTC, Juergen
Details
screenshot of the received mail (54.68 KB, image/png)
2015-01-25 14:55 UTC, Juergen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen 2015-01-25 12:59:57 UTC
When i write a new mail and add a hyperlink using the toolbar-menu thre additional characters: "[1]" are added to the end of the link and the link-description.
If I just use copy paste, the link is correct.

Example:
just using ctrl-c
https://www.google.com

insert hyperlink from Toolbar
https://www.google.com[1] 


--------
[1] https://www.google.com


Reproducible: Always

Steps to Reproduce:
1. copy a hyperlink from the browser
2. insert it by paste ( ctrl-c ), it works
3. use the insert hyperlink from the toolbar: [1] is added at the and of the link

Actual Results:  
The link is too long and does not exist

Expected Results:  
shouldn't add anything to the link
Comment 1 Laurent Montel 2015-01-25 14:28:34 UTC
Screenshot please
and we don't use composereditor-ng in kmail2
Comment 2 Juergen 2015-01-25 14:51:33 UTC
Created attachment 90645 [details]
screenshot of the mail editor

The first link is not recognized, because it is just pasted using ctrl-c ctrl-v.
Second one using insert hyperlink looks correct.
Comment 3 Juergen 2015-01-25 14:55:37 UTC
Created attachment 90646 [details]
screenshot of the received mail

In the received mail the first link is converted (nice feature), it is clickable and correct.
The second one using insert hyperlink has somehow the [1] attatched and links to https://www.google.com/[1] , which does not exist.
Comment 4 Laurent Montel 2015-01-25 17:57:24 UTC
Ok I can reproduce bug.
Comment 5 Laurent Montel 2016-11-23 07:07:41 UTC
Git commit e51bb2172e2d414347c136e96b103c3c305eac01 by Montel Laurent.
Committed on 23/11/2016 at 07:07.
Pushed by mlaurent into branch 'master'.

Fix Bug 343275 - [1] added at the end of a hyperlink

FIXED-IN: 5.29

M  +5    -0    autotests/ktexttohtmltest.cpp
M  +6    -0    src/lib/text/ktexttohtml.cpp

http://commits.kde.org/kcoreaddons/e51bb2172e2d414347c136e96b103c3c305eac01