Fix Bug 343275 - [1] added at the end of a hyperlink

FIXED-IN: 5.29
BUG: 343275